tests/fixtures/invalid/float_rshift_none.py
# Cannot right shift Float and None
x: float = 1.0 >> None
